--- a/ember/app/templates/application.hbs
+++ b/ember/app/templates/application.hbs
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-full navbar-dark bg-primary">
   <div class="container">
-    {{#link-to 'application' class='navbar-brand'}} Achievements{{/link-to}}
+    {{#link-to 'application' class='navbar-brand'}}Achievements{{/link-to}}
 
     <div class="pull-sm-right">
       {{#if session.isAuthenticated}}
-        <button class="btn btn-secondary-outine" {{action 'logout'}}>Logout</button>
+        <button class="btn btn-secondary-outline" {{action "logout"}}>Logout</button>
       {{else}}
-        <button class="btn btn-secondary-outine" {{action 'login'}}>Login</button>
+        <button class="btn btn-secondary-outline" {{action "login"}}>Login</button>
       {{/if}}
     </div>
   </div>
@@ -17,12 +17,15 @@
     <nav class="col-sm-2">
       <ul class="nav nav-stacked nav-pills">
         <li class="nav-item">
-          {{#link-to 'application' class='nav-link'}}Challanges{{/link-to}}
+          {{#link-to 'challanges' class='nav-link'}}Challanges{{/link-to}}
         </li>
         <li class="nav-item">
-          {{#link-to 'application' class='nav-link'}}Categories{{/link-to}}
+          {{#link-to 'categories' class='nav-link'}}Categories{{/link-to}}
         </li>
       </ul>
     </nav>
+    <section id="main" class="col-sm-7">
+      {{outlet}}
+    </section>
   </div>
 </div>
