[WIP] crud actions on resources

--- a/ember/app/templates/categories/index.hbs
+++ b/ember/app/templates/categories/index.hbs
@@ -14,9 +14,9 @@
         <td>{{category.description}}</td>
         <td>{{category.challenges.length}}</td>
         <td>
-          {{#link-to 'categories.show' challange}}Details{{/link-to}}
+          {{#link-to 'categories.show' category}}Details{{/link-to}}
           |
-          {{#link-to 'categories.edit' challange}}Edit{{/link-to}}
+          {{#link-to 'categories.edit' category}}Edit{{/link-to}}
         </td>
       </tr>
     {{else}}
