--- a/ember/app/templates/challanges/index.hbs
+++ b/ember/app/templates/challanges/index.hbs
@@ -18,6 +18,9 @@
         <td>{{challange.completedAt}}</td>
         <td>{{challange.createdAt}}</td>
         <td>
+          {{#link-to 'challanges.show' challange}}Details{{/link-to}}
+          |
+          {{#link-to 'challanges.edit' challange}}Edit{{/link-to}}
         </td>
       </tr>
     {{else}}
