--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,17 +9,14 @@
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
-*= require adminlte
-*= require all-skins.min
-*= require bootstrap-daterangepicker
-*= require bootstrap-tokenfield
-*= require jquery-ui
 *= require_tree .
 *= require_self
 */
 @import "bootstrap_configuration";
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "font-awesome-sprockets";
+@import "font-awesome";
 
 //->Prelang (ui_framework:twitter_bootstrap)
 
